[tool.poetry]
name = "speiseplan"
version = "0.8.0"
description = "Its not always good to start from scratch .. lets have some sane defaults .."
authors = ["Andy Grabow <andy@freilandkiwis.de>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/kakulukia/django-default-project"
homepage = "https://github.com/kakulukia/django-default-project"
package-mode = false

[tool.poetry.dependencies]
django = "^5.1.6"
django-secrets = "^1.0.2"
django-extensions = "^3.1.1"
dj-static = "^0.0.6"
django-compressor = "^4.1"
django-axes = "^7.0.2"
pypugjs = "^5.8.1"
django-post-office = "^3.2.1"
uwsgidecorators = "^1.1.0"
huepy = "^1.2.1"
djangorestframework = "^3.11.0"
requests = "^2.22.0"
pendulum = "^3.0.0"
Pillow = "^11.1.0"
python = "^3.10"
django-cors-headers = "^4.7.0"
icecream = "^2.1.3"
django-sass-processor = "^1.2.1"
gunicorn = "^23.0.0"
django-jazzmin = "^3.0.1"
fabric3 = {git = "https://github.com/kakulukia/fabric3"}
django-ckeditor = "^6.7.1"
weasyprint = "^64.1"
django-filter = "^25.1"
django-weasyprint = "^2.3.1"
libsass = "^0.23.0"
django-undeletable = "^1.1.2"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0.1"
ipdb = "^0.13.6"
django-browser-reload = "^1.6.0"
ruff = "^0.9.7"
ipython = "^8.32.0"

[tool.black]
line-length = 99
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
/migrations/  # exclude django migrations
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
exclude = ['.git', 'migrations']
max-line-length = 140
