[project]
name = "Speiseplan"
version = "0.9.0"
requires-python = ">=3.11"
editable = false


[tool.poetry]
description = "Jörgs Speisekartenplaner"
authors = ["Andy Grabow <andy@freilandkiwis.de>"]
license = "MIT"
readme = 'README.md'

repository = "https://github.com/kakulukia/django-default-project"
homepage = "https://github.com/kakulukia/django-default-project"
package-mode = false

[tool.poetry.dependencies]
django = "^5.2.3"
django-secrets = "^1.2.4"
django-extensions = "^4.1"
dj-static = "^0.0.6"
django-compressor = "^4.5.1"
django-axes = "^7.1.0"
pypugjs = "^5.12.0"
django-post-office = "^3.9.1"
uwsgidecorators = "^1.1.0"
huepy = "^1.2.1"
djangorestframework = "^3.16.0"
requests = "^2.32.4"
pendulum = "^3.1.0"
Pillow = "^11.2.1"
python = "^3.11"
django-cors-headers = "^4.7.0"
icecream = "^2.1.5"
django-sass-processor = "^1.4.1"
gunicorn = "^23.0.0"
django-jazzmin = "^3.0.1"
django-ckeditor = "^6.7.3"
weasyprint = "52.5"
django-filter = "^25.1"
libsass = "^0.23.0"
django-undeletable = "^1.1.2"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.2.0"
ipdb = "^0.13.13"
django-browser-reload = "^1.18.0"
ruff = "^0.11.13"
ipython = "^9.3.0"
fab-classic = {git = "https://github.com/kakulukia/fab-classic.git", rev = "master"}

[tool.black]
line-length = 99
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
/migrations/  # exclude django migrations
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
exclude = ['.git', 'migrations']
max-line-length = 140
